tests/snapshots/yaml_suite_snapshots__yaml_suite_36F6_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Multiline plain scalar with empty line
  from: "@perlpunk"
  tags: mapping scalar
  yaml: "---\nplain: a\n b\n\n c\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :plain\n   =VAL :a b\\nc\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"plain\": \"a b\\nc\"\n}\n"
  dump: "---\nplain: 'a b\n\n  c'\n"
