tests/snapshots/yaml_suite_snapshots__yaml_suite_3ALJ_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Block Sequence in Block Sequence
  from: NimYAML tests
  tags: sequence
  yaml: "- - s1_i1\n  - s1_i2\n- s2\n"
  tree: "+STR\n +DOC\n  +SEQ\n   +SEQ\n    =VAL :s1_i1\n    =VAL :s1_i2\n   -SEQ\n   =VAL :s2\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  [\n    \"s1_i1\",\n    \"s1_i2\"\n  ],\n  \"s2\"\n]\n"
