tests/snapshots/yaml_suite_snapshots__yaml_suite_3HFZ_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Invalid content after document end marker
  from: "@perlpunk"
  tags: error footer
  fail: true
  yaml: "---\nkey: value\n... invalid\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :key\n   =VAL :value\n  -MAP\n -DOC ...\n"
