tests/snapshots/yaml_suite_snapshots__yaml_suite_3HFZ_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Invalid content after document end marker
  tags: error footer
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :key\n   =VAL :value\n  -MAP\n -DOC ...\n"
  yaml: "---\nkey: value\n... invalid\n"
